--- a/my_project/my_project/templates/base.html
+++ b/my_project/my_project/templates/base.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+   <link rel= stylesheet href="https //maxcdn.bootstrapcdn.com/bootstrap/4.7.0/css/font-awesome.min.css">
 </head>
-<body bgcolor="#a89e32">
+<body>
+
+    <section class="hero is-primary">
+          <div class="hero-body" style="padding-left: 50%">
+            <h1 class="title">Loginpage</h1>
+          </div>
+    </section>
   <div  class="container" style="padding-left:100px">
 
      <main>
