--- a/my_project/my_project/templates/category.html
+++ b/my_project/my_project/templates/category.html
@@ -1,38 +1,49 @@
 <html>
 <head>
     <title>category</title>
-    <title>welcome to news</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <link rel= stylesheet href="https //maxcdn.bootstrapcdn.com/bootstrap/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+        body {
+          margin: 0;
+          font-family: Arial, Helvetica, sans-serif;
+        }
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
+        .topnav {
+          overflow: hidden;
+          background-color: #333;
+        }
 
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+        .topnav a {
+          float: left;
+          color: #f2f2f2;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+        }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+        .topnav a:hover {
+          background-color: #ddd;
+          color: black;
+        }
 
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
+        .topnav a.active {
+          background-color: #4CAF50;
+          color: white;
+        }
+        #mydiv
+        {
+           background-color:black;
+           background-repeat:no-repeat;
+           background-size:contain;
+           background-size: 300px 300px;
+           width:300px;height:300px;
+           float:left;margin-right:10px;margin-bottom:10px;
+
+        }
 </style>
 </head>
 <body>
@@ -41,27 +52,29 @@ body {
 
         <a href="{% url 'weather' %}">Weather</a>
          <a href="{% url 'about' %}">About</a>
-        <a href="{% url 'logout' %}">logout</a></p>
+        <a href="{% url 'logout' %}">Logout</a></p>
      </div>
-     <section class="hero is-padding is-danger" style="height:100px">
+     <section class="hero is-padding is-primary" style="height:100px">
           <div class="hero-body" style="padding-left: 45%">
-            <h1 class="subtitle">category</h1>
+            <h1 class="title">Category</h1>
 
           </div>
      </section>
+     <br>
+
 
     {% for category_news in category_data %}
 
-            <a href="{{category_news.url}}"
-            <div class="container" style="background-color:green;background-size: 300px 300px; width:300px;height:300px;float:left;margin-right:10px;margin-bottom:10px;">
+            <a href="{{category_news.url}}">
+                <div id="mydiv" class="box">
 
-                                    <div class="content" style="width:300px;height:300px" >
-                                        <p>
-                                            <span class="description"><font color="black">{{category_news.description}}</font> </span>
-                                            <br>
+                                        <div class="content" style="justify-content:center;font-family: 'Josefin Sans', sans-serif" >
+                                            <p>
+                                                <span class="description"><font color="white">{{category_news.description}}</font> </span>
+                                                <br>
 
-                                    </div>
-            </div>
+                                        </div>
+                </div>
             </a>
 
     {% endfor %}
