--- a/my_project/my_project/templates/home.html
+++ b/my_project/my_project/templates/home.html
@@ -6,7 +6,10 @@
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
 
-  <p><a href="{% url 'logout' %}">logout</a></p>
+  <p>
+    <a href="{% url 'news' %}">Home</a>
+    <a href="{% url 'logout' %}">logout</a>
+  </p>
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">login</a>
