--- a/my_project/my_project/templates/base.html
+++ b/my_project/my_project/templates/base.html
@@ -3,15 +3,57 @@
 <head>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
    <link rel= stylesheet href="https //maxcdn.bootstrapcdn.com/bootstrap/4.7.0/css/font-awesome.min.css">
+    <style>
+        .container {
+<!--          position: ;-->
+          width: 100%;
+
+        }
+
+        .image {
+          opacity: 1;
+          display: block;
+          width: 100%;
+          height: 100%;
+          transition: .5s ease;
+          backface-visibility: hidden;
+        }
+
+        .middle {
+          transition: .5s ease;
+          opacity: 0;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          text-align: center;
+        }
+
+        .container:hover .image {
+          opacity: 0.9 ;
+        }
+
+        .container:hover .middle {
+          opacity: 1;
+        }
+
+        .button {
+          background-color: #7c818a;
+          color: white;
+          font-size: 16px;
+          padding: 16px 32px;
+        }
+</style>
 </head>
 <body>
 
-    <section class="hero is-primary">
-          <div class="hero-body" style="padding-left: 50%">
+    <section class="hero is-dark">
+          <div class="hero-body" style="padding-left: 40%">
             <h1 class="title">Loginpage</h1>
           </div>
     </section>
-  <div  class="container" style="padding-left:100px">
+  <div  class="container">
 
      <main>
          {% block content %}
