--- a/my_project/my_project/templates/htmlpage.html
+++ b/my_project/my_project/templates/htmlpage.html
@@ -13,7 +13,7 @@
 
         .topnav {
           overflow: hidden;
-          background-color: #333;
+          background-color: black;
         }
 
         .topnav a {
@@ -26,7 +26,7 @@
         }
 
         .topnav a:hover {
-          background-color: #ddd;
+          background-color: #D3D3D3;
           color: black;
         }
 
@@ -41,13 +41,13 @@
     <div class="topnav">
 
 
-        <a href="{% url 'news' %}">Home</a>
-        <a class="active" href="#weather">Weather</a>
-         <a href="{% url 'about' %}">About</a>
-        <a href="{% url 'logout' %}">Logout</a></p>
+        <a href="{% url 'news' %}"><font color="white">Home</font></a>
+        <a href="{% url 'about' %}"><font color="white">About</font></a>
+        <a href="{% url 'weather' %}"><font color="white">Weather</font></a>
+        <a href="{% url 'logout' %}"><font color="white">Logout</font></a>
     </div>
     {% if user.is_authenticated %}
-    <section class="hero is-primary">
+    <section class="hero is-dark">
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
@@ -111,8 +111,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
-    </footer>
+
     {% else %}
         <p>You are not logged in</p>
         <a href="{% url 'login' %}">login</a>
