--- a/my_project/my_project/templates/about.html
+++ b/my_project/my_project/templates/about.html
@@ -76,7 +76,8 @@
                     <div class="content">
                     <!-- Content -->
                       <p>
-                        One should be updated on the latest happenings around the world. The site shows the top headlines across the globe and also news on areas of our interest.
+                        One should be updated on the latest happenings around the world. The site shows the top headlines across the globe and also news on areas of our interest.<br>
+                          Built with the content fetched from Newsapi.com:-News API is a simple and easy-to-use API that returns JSON metadata for headlines and articles live all over the web right now.
                       </p>
                     </div>
                     </div>
@@ -100,7 +101,8 @@
                     <div class="content">
                     <!-- Content -->
                       <p>
-                         The site provides the accurate weather condition and temperature of a particular location.
+                         The site provides the accurate weather condition and temperature of a particular location.<br>
+                          The content is fetched from openweathermap.co.
                       </p>
                     </div>
                   </div>
