--- a/my_project/my_project/templates/htmlpage.html
+++ b/my_project/my_project/templates/htmlpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
 
@@ -49,9 +49,9 @@
     {% if user.is_authenticated %}
     <section class="hero is-dark">
         <div class="hero-body">
-            <div class="container">
+            <div class="container" style="padding-left:40%">
                 <h1 class="title">
-                    What's the weather like?
+                    Weather
                 </h1>
             </div>
         </div>
@@ -68,13 +68,11 @@
                             </div>
                             <div class="control">
                                 <button type="submit" class="button is-info">
-                                    Add City
+                                    search
                                 </button>
                             </div>
                         </div>
-                        {% if message %}
-                            <div class="notification {{ message_class }}">{{ message }}</div>
-                        {% endif %}
+
                     </form>
                 </div>
             </div>
@@ -84,7 +82,9 @@
         <div class="container">
             <div class="columns">
                 <div class="column is-offset-4 is-4">
+
                     {% for city_weather in weather_data %}
+
                     <div class="box">
                         <article class="media">
                             <div class="media-left">
