--- a/my_project/my_project/templates/category.html
+++ b/my_project/my_project/templates/category.html
@@ -58,7 +58,7 @@
      {% if user.is_authenticated %}
      <section class="hero is-padding is-dark" style="height:100px">
           <div class="hero-body" style="padding-left: 45%">
-            <h1 class="title">Category</h1>
+            <h1 class="title">{{name}}</h1>
 
           </div>
      </section>
