--- a/my_project/my_project/templates/htmlpage.html
+++ b/my_project/my_project/templates/htmlpage.html
@@ -56,61 +56,70 @@
             </div>
         </div>
     </section>
-    <section class="section">
-        <div class="container">
-            <div class="columns">
-                <div class="column is-offset-4 is-4">
-                    <form method="POST">
-                        {% csrf_token %}
-                        <div class="field has-addons">
-                            <div class="control is-expanded">
-                                {{ form.name }}
-                            </div>
-                            <div class="control">
-                                <button type="submit" class="button is-info">
-                                    search
-                                </button>
-                            </div>
-                        </div>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="section">
-        <div class="container">
-            <div class="columns">
-                <div class="column is-offset-4 is-4">
-
-                    {% for city_weather in weather_data %}
-
-                    <div class="box">
-                        <article class="media">
-                            <div class="media-left">
-                                <figure class="image is-50x50">
-                                    <img src="http://openweathermap.org/img/w/{{ city_weather.icon }}.png" alt="Image">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <div class="content">
-                                    <p>
-                                        <span class="title">{{ city_weather.city }}</span>
-                                        <br>
-                                        <span class="subtitle">{{ city_weather.temperature }}° F</span>
-                                        <br> {{ city_weather.description }}
-                                    </p>
+    <div style="background-image:url('https://wallpapersite.com/images/pages/pic_w/10470.png');height:1000px">
+        <section class="section">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-offset-4 is-4">
+                        <form method="POST">
+                            {% csrf_token %}
+                            <div class="field has-addons">
+                                <div class="control is-expanded">
+                                    {{ form.name }}
+                                </div>
+                                <div class="control">
+                                    <button type="submit" class="button is-info">
+                                        search
+                                    </button>
                                 </div>
                             </div>
 
-
-                        </article>
+                        </form>
                     </div>
-                    {% endfor %}
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <section class="section">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-offset-4 is-4">
+
+                        {% for city_weather in weather_data %}
+
+                        <div class="box" style="background-color:lightblue">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-50x50">
+                                        <img src="http://openweathermap.org/img/w/{{ city_weather.icon }}.png" alt="Image">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <span class="title">{{ city_weather.city }}</span>
+                                            <br>
+                                            <span class="subtitle">{{ city_weather.temperature }}° F</span>
+                                            <br> {{ city_weather.description }}
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="media-right">
+                                    <a href="{% url 'delete_city' city_weather.city %}">
+                                        <button class="delete"></button>
+                                    </a>
+                                </div>
+
+                            </article>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </div>
+
+
 
     {% else %}
         <p>You are not logged in</p>
