--- a/my_project/my_project/templates/news.html
+++ b/my_project/my_project/templates/news.html
@@ -44,9 +44,9 @@ body {
 
 
          <a href="{% url 'news' %}"><font color="white">Home</font></a>
-         <a href="{% url 'category' 'business' %}"><font color="white">Business</font></a>
-         <a href="{% url 'category' 'sports' %}"><font color="white">Sports</font></a>
-         <a href="{% url 'category' 'technology' %}"><font color="white">Technology</font></a>
+         <a href="{% url 'category' 'Business' %}"><font color="white">Business</font></a>
+         <a href="{% url 'category' 'Sports' %}"><font color="white">Sports</font></a>
+         <a href="{% url 'category' 'Technology' %}"><font color="white">Technology</font></a>
          <a href="{% url 'about' %}"><font color="white">About</font></a>
          <a href="{% url 'weather' %}"><font color="white">Weather</font></a>
          <a href="{% url 'logout' %}"><font color="white">Logout</font></a>
