--- a/my_project/my_project/templates/home.html
+++ b/my_project/my_project/templates/home.html
@@ -13,10 +13,13 @@
 {% else %}
 <div>
   <img src="https://images.template.net/wp-content/uploads/2016/06/07085741/Embroidery-Black-Background-for-Invitations.jpg" alt="Avatar" class="image" style="width:100%">
-  <div class="middle">
+  <a href="{% url 'login' %}">
+    <div class="middle">
 
-    <div class="button"><a href="{% url 'login' %}"> <font color="white"> Login</font> </a></div>
-  </div>
+    <div class="button"><font color="white"> Login</font>
+    </div>
+    </div>
+  </a>
 </div>
 
 {% endif %}
