--- a/my_project/my_project/templates/htmlpage.html
+++ b/my_project/my_project/templates/htmlpage.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Document</title>
+    <title>NewsApp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
     <style>
         body {
