--- a/my_project/my_project/templates/news.html
+++ b/my_project/my_project/templates/news.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <section>
 <head>
-	<title>welcome to news</title>
+	<title>NewsApp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <link rel= stylesheet href="https //maxcdn.bootstrapcdn.com/bootstrap/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
