--- a/my_project/my_project/templates/category.html
+++ b/my_project/my_project/templates/category.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>category</title>
+    <title>NewsApp</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <link rel= stylesheet href="https //maxcdn.bootstrapcdn.com/bootstrap/4.7.0/css/font-awesome.min.css">
