--- a/my_project/my_project/templates/base.html
+++ b/my_project/my_project/templates/base.html
@@ -25,7 +25,17 @@
           opacity: 0;
           position: absolute;
           top: 50%;
-          left: 50%;
+          left: 40%;
+          transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          text-align: center;
+        }
+        .middle2 {
+          transition: .5s ease;
+          opacity: 0;
+          position: absolute;
+          top: 50%;
+          left: 55%;
           transform: translate(-50%, -50%);
           -ms-transform: translate(-50%, -50%);
           text-align: center;
@@ -36,6 +46,9 @@
         }
 
         .container:hover .middle {
+          opacity: 1;
+        }
+        .container:hover .middle2 {
           opacity: 1;
         }
 
