--- a/my_project/my_project/templates/home.html
+++ b/my_project/my_project/templates/home.html
@@ -13,13 +13,21 @@
 {% else %}
 <div>
   <img src="https://images.template.net/wp-content/uploads/2016/06/07085741/Embroidery-Black-Background-for-Invitations.jpg" alt="Avatar" class="image" style="width:100%">
-  <a href="{% url 'login' %}">
-    <div class="middle">
+    <a href="{% url 'login' %}">
+      <div class="middle">
 
-    <div class="button"><font color="white"> Login</font>
-    </div>
-    </div>
-  </a>
+      <div class="button"><font color="white"> Login</font>
+      </div>
+      </div>
+    </a>
+    <a href="{% url 'signup' %}">
+      <div class="middle2" >
+
+      <div class="button"><font color="white"> signup</font>
+      </div>
+      </div>
+    </a>
+
 </div>
 
 {% endif %}
