--- a/my_project/my_project/templates/category.html
+++ b/my_project/my_project/templates/category.html
@@ -39,12 +39,12 @@
         }
         #mydiv
         {
-           background-color:white;
+           background-color:#e3e6e4;
            background-repeat:no-repeat;
            background-size:contain;
 
 
-           margin: 1%;
+           margin: 2%;
            border-radius: 2% 2%;
         }
 </style>
@@ -82,7 +82,7 @@
 	                                    <br>
 	                                </p>
 	            </div>
-                <div style="float:left">
+                <div style="position: absolute; bottom: 0pt; right: 0pt">
                     <a href="{{category_news.url}}">
                         <p>learn more..</p>
                     </a>
