--- a/my_project/my_project/templates/falseuser.html
+++ b/my_project/my_project/templates/falseuser.html
@@ -2,7 +2,7 @@
 <head>
     <title>NewsApp</title>
 </head>
-<body background="https://thumbs.dreamstime.com/b/oops-isolated-abstract-flat-background-design-illustration-oops-abstract-flat-background-design-illustration-129642273.jpg">
+<body style="background-image:url('https://thumbs.dreamstime.com/b/oops-isolated-abstract-flat-background-design-illustration-oops-abstract-flat-background-design-illustration-129642273.jpg');background-size:100%">
 <h2 align="middle">.....Only admin allowed to edit contents.........</h2>
 </body>
 </html>
