--- a/my_project/my_project/templates/base.html
+++ b/my_project/my_project/templates/base.html
@@ -58,15 +58,79 @@
           font-size: 16px;
           padding: 16px 32px;
         }
+        .login{
+          min-height: 100vh;
+          background-color: #f7f7f7;
+        }
+        .login .login-page{
+          height: 100vh;display: flex;align-items: center;
+        }
+        .login .login-sidebar, .login-form-wrapper{
+          background: #fff;height: 80vh;
+        }
+        .login .login-sidebar{
+          background:  url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTv4noPsQPUf1Qh6pJV_8EgX2DTJ7PaMq_A5qcWDAXoHjKlEJuK_w')center center no-repeat;
+          background-size: cover;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          position: relative;
+        }
+        .login .login-sidebar::before{
+          content: '';
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          z-index: 1;
+          background-image: linear-gradient(to bottom right,#58595c,#58595c);
+          opacity: .8;
+        }
+        .login .login-sidebar .login-gradient-background{
+          position: absolute;z-index: 2;
+        }
+        .login .login-sidebar .login-gradient-background h1{
+          font-size: 2em;font-weight: 600;text-transform: uppercase;color: #ffffff;
+        }
+
+        .login-form-wrapper .register-btn a{
+          color: #ffffff;border-radius: 18px;padding: 0.57em 2em;background: #21AEA2;
+        }
+        .login-form-wrapper .register-btn a:hover{
+          opacity: .8;
+        }
+        .field-box .field{margin-bottom: 2.1em;}
+        .login-form-wrapper .field-box{
+          display: flex;
+          height: 80%;
+          align-items: center;
+        }
+        .login-form-wrapper .field-box .login-heading{
+          font-size: 1.95em;
+        }
+        .login-form-wrapper .field-box .login-subheading{
+          margin-bottom: 2em;font-size: 0.85em;color: #787877;
+        }
+
+        .login-form-wrapper .field-box .login1{
+          background: #6472A5;color: #ffffff;border-radius: 18px;padding: 0.57em 2em;
+        }
+        .login-form-wrapper .field-box .login1 .forgot-link{
+          color: #777777;font-size: 0.85em;
+        }
+        .login-form-wrapper .field-box .login1 .forgot-link:hover{
+          color: #444444;font-size: 0.85em;
+        }
+        .login-heading{
+            padding-left:50%
+        }
 </style>
 </head>
 <body>
 
-    <section class="hero is-dark">
-          <div class="hero-body" style="padding-left: 40%">
-            <h1 class="title">Loginpage</h1>
-          </div>
-    </section>
+
+
 
   <div  class="container">
 
