--- a/my_project/my_project/templates/home.html
+++ b/my_project/my_project/templates/home.html
@@ -12,7 +12,7 @@
   </p>
 {% else %}
 <div>
-  <img src="https://images.template.net/wp-content/uploads/2016/06/07085741/Embroidery-Black-Background-for-Invitations.jpg" alt="Avatar" class="image" style="width:100%">
+  <img src="https://images.template.net/wp-content/uploads/2016/06/07085741/Embroidery-Black-Background-for-Invitations.jpg" alt="Avatar" class="image" style="width:100%;height:100%">
     <a href="{% url 'login' %}">
       <div class="middle">
 
